# tuxfans

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  PERMISSIONS.md  README.md  TROUBLESHOOTING.md
.github/workflows/: publish.yml
packaging/aur/: .SRCINFO  PKGBUILD
packaging/homebrew/Formula/: tuxfans.rb
scripts/: release.sh
src/: config.rs  controller.rs  lib.rs  main.rs  sensors.rs  tuxedo.rs
udev/: 99-tuxfans.rules
